--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@ title: {{ site.name }}
 <div id="home">
   <h1>Welcome!</h1>
   
-  <a href="https://rdtarvin.github.io/RADseq_Quito_2017/">https://rdtarvin.github.io/RADseq_Quito_2017/</a>
+  You are <a href="https://rdtarvin.github.io/RADseq_Quito_2017/">here</a>.
 
 	This is the official website for the RADseq workshop following the XI Congreso Latinoamericano de Herpetologia in Quito, Ecuador, sponsored by <a href="http://zoologia.puce.edu.ec/Vertebrados/">QCAZ @ PUCE</a>.  <br>
 	The workshop will take place in room xx at PUCE (address) from July 31 until August 4. We will cover theory and experimental design of RADseq projects as well as laboratory methods and bioinformatic pipelines.      <br>
