added to index.html layout

--- a/index.html
+++ b/index.html
@@ -18,9 +18,10 @@ title: {{ site.name }}
 	If you are using a <b>Mac</b>, you will need to install a text editor. Some excellent options are either <a href="http://www.barebones.com/products/textwrangler/">Text Wrangler</a>, <a href="http://www.sublimetext.com/2">Sublime Text</a>, or <a href="https://atom.io/">Atom</a>. Alternatively, you can download Apple's text editor, XCode, from the App Store. <br>
 	If you are using a <b>Windows/PC</b>, we recommend <a href="https://notepad-plus-plus.org/">Notepad++</a>
 </div>
-
+<br><br>
 <div>
   <ul class="posts">
+  <h1>Syllabus and Materials</h1>
   <table>
             <tr>
                 <th>Day</th> 
