changed index format

--- a/index.html
+++ b/index.html
@@ -20,14 +20,14 @@ title: {{ site.name }}
 </div>
 <br><br>
 <div>
-  <ul class="posts">
+
   <h1>Syllabus and Materials</h1>
   <table>
             <tr>
                 <th>Day</th> 
                 <th>Topic</th>
                 <th>Materials (Download Link)</th>
-                <th>Instructor</th>
+                <th>Instructor(s)</th>
             </tr>
     {% for post in site.posts %}
      <tr>
@@ -38,5 +38,4 @@ title: {{ site.name }}
               </tr>   
     {% endfor %}
     </table>
-  </ul>
 </div>
