--- a/index.html
+++ b/index.html
@@ -12,11 +12,13 @@ title: {{ site.name }}
 
 	This is the official website for the RADseq workshop following the XI Congreso Latinoamericano de Herpetologia in Quito, Ecuador, sponsored by <a href="http://zoologia.puce.edu.ec/Vertebrados/">QCAZ @ PUCE</a>.
 	The workshop will take place in room xx at PUCE (address) from July 31 until August 4. We will cover theory and experimental design of RADseq projects as well as laboratory methods and bioinformatic pipelines.      <br>
-	Please complete the following short courses on Bash BEFORE the workshop. <br>
 
 	<h1>Installation and Setup Instructions</h1>
-	If you are using a <b>Mac</b>, you will need to install a text editor. Some excellent options are either <a href="http://www.barebones.com/products/textwrangler/">Text Wrangler</a>, <a href="http://www.sublimetext.com/2">Sublime Text</a>, or <a href="https://atom.io/">Atom</a>. Alternatively, you can download Apple's text editor, XCode, from the App Store. <br>
-	If you are using a <b>Windows/PC</b>, we recommend <a href="https://notepad-plus-plus.org/">Notepad++</a>
+	Please complete the following BEFORE the workshop. <br>
+	1. Install a text editor. If you are using a <b>Mac</b>, we suggest <a href="http://www.barebones.com/products/textwrangler/">Text Wrangler</a>, <a href="http://www.sublimetext.com/2">Sublime Text</a>, or <a href="https://atom.io/">Atom</a>. 
+	For <b>Windows/PC</b>, we recommend <a href="https://notepad-plus-plus.org/">Notepad++</a>
+	2. Complete these short courses on Bash.
+
 </div>
 <br><br>
 <div>
