adding shell scripting course info

--- a/index.html
+++ b/index.html
@@ -18,7 +18,9 @@ title: {{ site.name }}
 	<ol>
 	<li>Install a text editor. If you are using a <b>Mac</b>, we suggest <a href="http://www.barebones.com/products/textwrangler/">Text Wrangler</a>, <a href="http://www.sublimetext.com/2">Sublime Text</a>, or <a href="https://atom.io/">Atom</a>. 
 	For <b>Windows/PC</b>, we recommend <a href="https://notepad-plus-plus.org/">Notepad++</a> </li>
-	<li>Complete these short courses on Bash.</li>
+	<li>Complete these short courses on Bash. </li>
+	<ul><li><a href="https://www.codecademy.com/learn/learn-the-command-line">Code Academy Command Line</a></li></ul>
+	
 	</ol>
 
 </div>
