--- a/index.html
+++ b/index.html
@@ -16,15 +16,7 @@ title: {{ site.name }}
 	<h1>Installation and Setup Instructions</h1>
 	Please complete the following BEFORE the workshop. <br>
 	<ol>
-	<li>Install a text editor. If you are using a <b>Mac</b>, we suggest <a href="http://www.barebones.com/products/textwrangler/">Text Wrangler</a>, <a href="http://www.sublimetext.com/2">Sublime Text</a>, or <a href="https://atom.io/">Atom</a>. 
-	For <b>Windows/PC</b>, we recommend <a href="https://notepad-plus-plus.org/">Notepad++</a> </li>
-	<li>Complete these short courses on Bash. </li>
-		<ul>
-		<li>If you have a windows machine, please download a Virtual Machine in order to run Linux</li>
-		<li><a href="https://www.codecademy.com/learn/learn-the-command-line">Code Academy Command Line</a></li>
-		
-		</ul>
-	
+	<li>Please see the README.md document for more information.
 	</ol>
 
 </div>
