updated index to point to readme

--- a/index.html
+++ b/index.html
@@ -14,10 +14,8 @@ title: {{ site.name }}
 	The workshop will take place in room xx at PUCE (address) from July 31 until August 4. We will cover theory and experimental design of RADseq projects as well as laboratory methods and bioinformatic pipelines.      <br>
 
 	<h1>Installation and Setup Instructions</h1>
-	Please complete the following BEFORE the workshop. <br>
-	<ol>
-	<li>Please see the README.md document for more information.
-	</ol>
+	Please see the <a href="https://github.com/rdtarvin/RADseq_Quito_2017/blob/master/README.md">README.md</a> document for more information.
+
 
 </div>
 <br>
