--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@ title: {{ site.name }}
   <h1>Syllabus and Materials</h1>
   <table>
             <tr>
+                <th>Lesson</th>
                 <th>Day</th> 
                 <th>Time</th>
                 <th>Topic</th>
@@ -32,6 +33,7 @@ title: {{ site.name }}
             </tr>
     {% for post in site.posts %}
      <tr>
+                 <td> {{ post.lesson }} </t>
                  <td> {{ post.date | date: '%B %d, %Y' }} </t>
                  <td> {{ post.time }} </t>
                  <td align="left"> <a href="{{ site.baseurl }}{{ post.url }}" title="{{ post.title }}">{{ post.title }}</a> </td>
