trying to fix website layout

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@ title: {{ site.name }}
 	The workshop will take place in room xx at PUCE (address) from July 31 until August 4. We will cover theory and experimental design of RADseq projects as well as laboratory methods and bioinformatic pipelines.      <br>
 
 	<h1>Installation and Setup Instructions</h1>
-	Please see the <a href="{{ site.baseurl }}/README/">README</a> page for more information.
+	Please see the <a href="{{ site.baseurl }}/README.md">README</a> page for more information.
 
 
 </div>
