--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@ title: {{ site.name }}
                 <th>Day</th> 
                 <th>Time</th>
                 <th>Topic</th>
-                <th>Materials (Download Link)</th>
+                <th>Materials (ppt)</th>
                 <th>Instructor(s)</th>
             </tr>
 	{% assign sorted_posts = site.posts | sort:"order" %}
