added new link to ppt and updated order of lectures

--- a/index.html
+++ b/index.html
@@ -34,10 +34,18 @@ title: {{ site.name }}
      <tr>
                  <td> {{ post.date | date: '%B %d, %Y' }} </t>
                  <td> {{ post.time }} </t>
-                 <td align="left"> <a href="{{ site.baseurl }}{{ post.url }}" title="{{ post.title }}">{{ post.title }}</a> </td>
-                 <td> <a href="{{ post.materials }}">Files</a></td> 
+                 <td> {{ post.title }}</td>
+                 {% if post.material-type == 'ppt' %}
+                 	<td> <a href="{{ post.materials }}">{{ post.material-type }}</a></td>
+                 {% else %}
+                 	<td align="left"> <a href="{{ site.baseurl }}{{ post.url }}" title="{{ post.title }}">{{ post.title }}</a> </td>
                  <td> {{ post.instructor }} </td> 
               </tr>   
     {% endfor %}
     </table>
 </div>
+
+
+
+
+
