fixing table on home page

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@ title: {{ site.name }}
      <tr>
                  <td> {{ post.date | date: '%B %d, %Y' }} </t>
                  <td> {{ post.time }} </t>
-                 <td> {{ post.title }}</td>
+                 <td> {{ post.title }}</t>
                  {% if post.material-type == 'ppt' %}
                  	<td> <a href="{{ post.materials }}">{{ post.material-type }}</a></td>
                  {% else %}
