--- a/index.html
+++ b/index.html
@@ -36,9 +36,9 @@ title: {{ site.name }}
                  <td> {{ post.time }} </t>
                  <td> {{ post.title }}</t>
                  {% if post.material-type == 'ppt' %}
-                 	<td> <a href="{{ post.materials }}">{{ post.material-type }}</a></td>
+                 	<td> <a href="{{ post.materials }}">Lesson</a></td>
                  {% else %}
-                 	<td align="left"> <a href="{{ site.baseurl }}{{ post.url }}" title="{{ post.title }}">{{ post.title }}</a> </td>
+                 	<td align="left"> <a href="{{ site.baseurl }}{{ post.url }}" title="{{ post.title }}">Lesson</a> </td>
                  {% endif %}
                  <td> {{ post.instructor }} </td> 
      </tr>   
