added header in html

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@ title: {{ site.name }}
 	This is the official website for the RADseq workshop following the XI Congreso Latinoamericano de Herpetologia in Quito, Ecuador, sponsored by <a href="http://zoologia.puce.edu.ec/Vertebrados/">QCAZ @ PUCE</a>.
 	The workshop will take place in room xx at PUCE (address) from July 31 until August 4. We will cover theory and experimental design of RADseq projects as well as laboratory methods and bioinformatic pipelines.      <br>
 
-	<h1>Before the workshop, please complete the following three tasks, in this order:<h1>
+	<h1>Before the workshop, please complete the following three tasks, in this order:</h1>
 	1. Fill out this [survey](https://www.surveymonkey.com/r/H6NDCHG). 
 	2. Install the virtual machine as described in the <a href="{{ site.baseurl }}/installation_instructions">installation instructions page</a>
 	3. Complete lessons 1-3 of this [software carpentry course](https://swcarpentry.github.io/shell-novice/) on bash/shell, unless you are certain that you feel comfortable in the shell environment. <br>
