--- a/index.html
+++ b/index.html
@@ -14,8 +14,10 @@ title: {{ site.name }}
 
 	<h1>Before the workshop, please complete the following three tasks, in this order:</h1>
 	
-	1. Fill out this [survey](https://www.surveymonkey.com/r/H6NDCHG). 
+	1. Fill out this <a href="{{ https://www.surveymonkey.com/r/H6NDCHG">pre-course survey </a> 
+	
 	2. Install the virtual machine as described in the <a href="{{ site.baseurl }}/installation_instructions">installation instructions page</a>
+	
 	3. Complete lessons 1-3 of this [software carpentry course](https://swcarpentry.github.io/shell-novice/) on bash/shell, unless you are certain that you feel comfortable in the shell environment. <br>
 
 
