maybe fixed now

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@ title: {{ site.name }}
 
 	<h1>Before the workshop, please complete the following three tasks, in this order:</h1>
 	
-	1. Fill out this <a href="{{ https://www.surveymonkey.com/r/H6NDCHG">pre-course survey </a> 
+	1. Fill out this <a href="https://www.surveymonkey.com/r/H6NDCHG">pre-course survey</a> 
 	
 	2. Install the virtual machine as described in the <a href="{{ site.baseurl }}/installation_instructions">installation instructions page</a>
 	
