--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@ title: {{ site.name }}
 	
 		2. Install the virtual machine as described in the <a href="{{ site.baseurl }}/installation_instructions">installation instructions page</a>
 	
-		3. Complete lessons 1-3 of this [](<a href="https://swcarpentry.github.io/shell-novice">software carpentry course</a>  on bash/shell, unless you are certain that you feel comfortable in the shell environment. <br>
+		3. Complete lessons 1-3 of this <a href="https://swcarpentry.github.io/shell-novice">software carpentry course</a>  on bash/shell, unless you are certain that you feel comfortable in the shell environment. <br>
 
 
 
