--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@ layout: default
 title: {{ site.name }}
 ---
 
-
+<h2>This website is under construction</h2>
 
 <div id="home">
   <h1>Welcome!</h1>
