--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@ title: {{ site.name }}
   
 
 	This is the official website for the RADseq workshop following the XI Congreso Latinoamericano de Herpetologia in Quito, Ecuador, sponsored by <a href="http://zoologia.puce.edu.ec/Vertebrados/">QCAZ @ PUCE</a>.
-	The workshop will take place in the Sala de Uso Múltiple on the first floor of the Biology Building from July 31 until August 4. We will cover theory and experimental design of RADseq projects as well as laboratory methods and bioinformatic pipelines.      <br>
+	The workshop will take place in the Sala de Uso Múltiple on the first floor of the Biology Building from July 31 until August 4 of 2017. We will cover theory and experimental design of RADseq projects as well as laboratory methods and bioinformatic pipelines.      <br>
 
 	<h1>Before the workshop, please complete the following three tasks, in this order:</h1>
 	
@@ -43,7 +43,7 @@ title: {{ site.name }}
 	{% assign sorted_posts = site.posts | sort:"order" %}
     {% for post in sorted_posts %}
      <tr>
-                 <td> {{ post.date | date: '%B %d, %Y' }} </t>
+                 <td> {{ post.date | date: '%B %d' }} </t>
                  <td> {{ post.time }} </t>
                  {% if post.material-type == 'ppt' %}
                  	<td> <a href="{{ post.materials }}">{{ post.title }}</a></td>
