--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@ title: {{ site.name }}
   
 
 	This is the official website for the RADseq workshop following the XI Congreso Latinoamericano de Herpetologia in Quito, Ecuador, sponsored by <a href="http://zoologia.puce.edu.ec/Vertebrados/">QCAZ @ PUCE</a>.
+	Virtual Machine support is provided by <a href="https://www.lab7.io/">Lab7</a>.
 	The workshop will take place in the Sala de Uso Múltiple on the first floor of the Biology Building from July 31 until August 4 of 2017. We will cover theory and experimental design of RADseq projects as well as laboratory methods and bioinformatic pipelines.      <br>
 
 	<h1>Before the workshop, please complete the following three tasks, in this order:</h1>
