added Lab7 blurb

--- a/index.html
+++ b/index.html
@@ -58,6 +58,22 @@ title: {{ site.name }}
     </table>
 </div>
 
+<div>
+
+Lab7 Systems is an Austin-based company that offers software solutions for life science labs. 
+Our core commercial software solution is the <a href="https://www.lab7.io/solutions/lab7-esp/">
+Lab7 Enterprise Science Platform</a> (ESP), which is the first, complete sample-to-answer 
+software platform for integrating and managing data-intensive lab operations (think [wet-lab] 
+LIMS + informatics + reporting all in one system). <a href="https://biobuilds.org/">BioBuilds</a> 
+is what’s installed in the VM and 
+is our curated collection of pre-built open-source bioinformatics tools that aims to reduce the 
+headaches associated installing and maintaining these tools (e.g., dependency hell and quirky build 
+systems). It’s free for anyone to download and use, but Lab7 offers support contracts for anyone 
+who needs additional technical support, packages with licensing constraints, or support deploying 
+these tools in regulated environments (e.g., clinics). Lab7 also has other offerings, including the 
+Lab7 Genomic Cloud and consulting.
+
+</div>
 
 
 
